test/expected/operator_after_command.out
shit: 1:8: error: Expected a command after an operator.
     1 |  true ||
       |         ^~ here.
